discovery/discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      labels:
        app: discovery
    spec:
      containers:
      - image: chrisyung/discovery:0.0.1
        name: discovery
        ports:
        - containerPort: 8761
