discovery/discovery-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    app: discovery
  type: NodePort
